--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:required="true" />
 
     <application
-        android:requestLegacyExternalStorage="true"
+        android:configChanges="orientation|screenSize"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EnrollApp">
+
         <activity android:name=".Onboard_activity" />
         <activity
             android:name=".Splash_screen"
