--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+<!--    restrrict to devices that have a camera.-->
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -41,6 +42,7 @@
         <service
             android:name="com.amazonaws.mobileconnectors.s3.transferutility.TransferService"
             android:enabled="true" />
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
